[project]
name = "chatterbox-tts"
version = "0.1.2.dev0"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI (Colab Compatible)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy>=1.26.0,<3.0.0",
    "resampy>=0.4.3",
    "librosa>=0.11.0",
    "s3tokenizer",
    "transformers>=4.46.0,<5.0.0",
    "diffusers>=0.29.0,<1.0.0",
    "resemble-perth>=1.0.1",
    "omegaconf>=2.3.0",
    "conformer>=0.3.2",
    "safetensors>=0.5.3"
]
[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/devnen/chatterbox"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
